--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,18 +1,22 @@
 FROM mcr.microsoft.com/vscode/devcontainers/python:3.10
 
 RUN pip install \
-    ipywidgets \
-    jupyter \
-    gymnasium \
-    moviepy \
     numpy==1.26.4 \
-    pandas \
+    matplotlib \
+    gymnasium \
     plotly \
-    polygon-api-client \
-    pygame \
-    stable-baselines3 \
-    scikit-learn \
-    tensorboard \
-    wandb
+    pandas \
+    wandb \
+    jupyter \
+    seaborn \
+    scipy \
+    statsmodels \
+    sktime \ 
+    darts \ 
+    yfinance \
+    cpi \
+    binance \
+    nasdaq-data-link \
+    arch
 
 EXPOSE 8888
