--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,9 +8,10 @@
 		"--privileged", 
 		"--net", "host",
 		"-e", "DISPLAY=host.docker.internal:0",
-		"-e", "XAUTHORITY=/tmp/.Xauthority",
-		"-v", "${localEnv:HOME}/.Xauthority:/tmp/.Xauthority",
-		"-p", "8888:8888"
+		// "-e", "XAUTHORITY=/tmp/.Xauthority",
+		// "-v", "${localEnv:HOME}/.Xauthority:/tmp/.Xauthority",
+		"-p", "8888:8888",
+		"-v", "/Users/andywatts/Code/Algo/data:/data"
 	],
 	"customizations": {
 		"vscode": {
